Fix nested form group vertical alignment

--- a/stylesheets/_structure.forms.scss
+++ b/stylesheets/_structure.forms.scss
@@ -183,6 +183,6 @@
 }
 
 // nested form groups underneath a normal form control, such as XFPs 'use a value from a previous action' pattern
-.form__group > .controls > .form__control + .form__group {
-    margin-top: .675em; // magic number to replicate help-block positioning
+.form__group > .controls > .form__group {
+    margin: .675em 0; // magic number to replicate help-block positioning
 }
